# artemote-api

./: .gitignore  Dockerfile  Dockerfile.prod  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: docker_hub_build_push.yml
artfeelz_api/: asgi.py  redoc.py  settings.py  urls.py  wsgi.py
artworks/: admin.py  models.py
artworks/api/: serializers.py  urls.py  views.py
artworks/migrations/: 0001_initial.py  0002_remove_artwork_slug.py
artworks/tests/: factories.py
artworks/tests/api/: test_artworks.py
emotions/: admin.py  apps.py  models.py
emotions/api/: serializers.py
emotions/migrations/: 0001_initial.py
emotions/tests/: factories.py
events/: admin.py  models.py
events/api/: serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_remove_event_slug.py  0003_remove_event_location_event_address.py  0004_alter_event_address.py
shared/: admin.py  models.py
shared/api/: serializers.py
shared/migrations/: 0001_initial.py
users/: admin.py  models.py
users/api/: serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_profile_photo.py  0003_profile_bio.py
users/tests/: factories.py
